--- a/css/overwrite.css
+++ b/css/overwrite.css
@@ -13,8 +13,11 @@ button{
     background-color:#606c76;
     border:#606c76;
     border-radius:0;
+    height: 2rem;
+    line-height: 100%;
+    box-shadow: 3px 3px 8px 0px rgba(50, 50, 50, 0.11);
 }
 .table_title{
     margin-top: 3rem;
-    margin-bottom: -1rem;
+    margin-bottom: 0rem;
 }
